--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -8,22 +9,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/parent_margin"
-        android:layout_marginRight="@dimen/parent_margin"
-        android:layout_marginTop="@dimen/parent_margin"
+        android:layout_margin="@dimen/parent_margin"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/operations"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/parent_margin"
+            android:layout_marginRight="@dimen/parent_margin"
+            android:layout_marginTop="@dimen/margin_top_first"
+            android:background="@color/colorButton"
+            android:height="@dimen/height_op"
+            android:gravity="end"
+            android:textAlignment="textEnd"
+            android:textSize="@dimen/small_text_size" />
         <TextView
             android:id="@+id/editor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorButton"
+            android:height="@dimen/height_edit"
             android:layout_marginLeft="@dimen/parent_margin"
             android:layout_marginRight="@dimen/parent_margin"
-            android:layout_marginTop="@dimen/margin_top_first"
-            android:textSize="@dimen/normal_text_size"
+            android:background="@color/colorButton"
+            android:gravity="end"
             android:textAlignment="textEnd"
-            android:gravity="end" />"
+            android:textSize="@dimen/normal_text_size" />"
 
         <LinearLayout
             android:layout_width="match_parent"
