--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -2,16 +2,22 @@
 <resources>
 
     <!-- Margin and padding sizes -->
-    <dimen name="parent_margin">10dp</dimen>
-    <dimen name="margin_top_first">30dp</dimen>
+    <dimen name="parent_margin">8dp</dimen>
+    <dimen name="margin_top_first">20dp</dimen>
     <dimen name="margin_top_last">1dp</dimen>
 
     <!-- Text sizes -->
     <dimen name="normal_text_size">45sp</dimen>
     <dimen name="button_text_size">35sp</dimen>
+    <dimen name="small_text_size">20sp</dimen>
 
     <!-- Button sizes -->
     <dimen name="max_button_width">72dp</dimen>
     <dimen name="max_button_height">60dp</dimen>
     <dimen name="button_margin">10dp</dimen>
+
+    <!-- TextView sizes-->
+    <dimen name="height_edit">90dp</dimen>
+    <dimen name="height_op">35dp</dimen>
+
 </resources>
