--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,22 +19,27 @@
             android:layout_marginLeft="@dimen/parent_margin"
             android:layout_marginRight="@dimen/parent_margin"
             android:layout_marginTop="@dimen/margin_top_first"
+            android:paddingRight="@dimen/parent_margin"
+            android:paddingLeft="@dimen/parent_margin"
             android:background="@color/colorButton"
             android:height="@dimen/height_op"
             android:gravity="end"
             android:textAlignment="textEnd"
             android:textSize="@dimen/small_text_size" />
+
         <TextView
             android:id="@+id/editor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:height="@dimen/height_edit"
             android:layout_marginLeft="@dimen/parent_margin"
             android:layout_marginRight="@dimen/parent_margin"
+            android:padding="@dimen/parent_margin"
+            android:height="@dimen/height_edit"
             android:background="@color/colorButton"
             android:gravity="end"
             android:textAlignment="textEnd"
-            android:textSize="@dimen/normal_text_size" />"
+            android:textSize="@dimen/normal_text_size"
+            android:maxLength="11"/>"
 
         <LinearLayout
             android:layout_width="match_parent"
