--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="max_button_width">65dp</dimen>
     <dimen name="max_button_height">50dp</dimen>
     <dimen name="button_margin">8dp</dimen>
+    <dimen name="large_button_width">138dp</dimen>
 
     <!-- TextView sizes-->
     <dimen name="height_edit">80dp</dimen>
