--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="max_button_width">72dp</dimen>
     <dimen name="max_button_height">60dp</dimen>
     <dimen name="button_margin">10dp</dimen>
+    <dimen name="large_button_width">154dp</dimen>
 
     <!-- TextView sizes-->
     <dimen name="height_edit">90dp</dimen>
